--- a/locale/fa.json
+++ b/locale/fa.json
@@ -12,7 +12,7 @@
     "string": "Explore <emphasis>Store’s dashboard</emphasis>"
   },
   "@next_dot_components_dot_atoms_dot_DemoBanner_dot_DemoBanner_dot_3662390044": {
-    "string": "Dashboard"
+    "string": "داشبورد"
   },
   "@next_dot_components_dot_atoms_dot_DropdownSelect_dot_DropdownSelect_dot_3280510613": {
     "string": "Sort by:"
@@ -27,7 +27,7 @@
     "string": "MY DATA"
   },
   "@next_dot_components_dot_molecules_dot_AccountTabTiles_dot_PasswordChangeForm_dot_1254879564": {
-    "string": "New Password"
+    "string": "پسورد جدید"
   },
   "@next_dot_components_dot_molecules_dot_AccountTabTiles_dot_PasswordChangeForm_dot_2218114941": {
     "string": "Old Password"
@@ -36,10 +36,10 @@
     "string": "Required field"
   },
   "@next_dot_components_dot_molecules_dot_AccountTabTiles_dot_PasswordChangeForm_dot_2799926859": {
-    "string": "Confirm Password"
+    "string": "تایید رمز عبور"
   },
   "@next_dot_components_dot_molecules_dot_AccountTabTiles_dot_PasswordChangeForm_dot_4253911811": {
-    "string": "Passwords do not match"
+    "string": "رمز عبور یکسان نیست"
   },
   "@next_dot_components_dot_molecules_dot_AccountTabTiles_dot_PasswordTile_dot_3445609170": {
     "string": "MY PASSWORD"
@@ -48,37 +48,34 @@
     "string": "Add to basket"
   },
   "@next_dot_components_dot_molecules_dot_AddressTile_dot_AddressTile_dot_1224809208": {
-    "string": "Default Address"
+    "string": "آدرس پیش‌فرض"
   },
   "@next_dot_components_dot_molecules_dot_AddressTile_dot_AddressTile_dot_1578192486": {
-    "string": "Default Billing Address"
+    "string": "آدرس فاکتور پیش‌فرض"
   },
   "@next_dot_components_dot_molecules_dot_AddressTile_dot_AddressTile_dot_2131178753": {
     "string": "Set as default shipping address"
   },
   "@next_dot_components_dot_molecules_dot_AddressTile_dot_AddressTile_dot_3096438859": {
-    "string": "Set as default billing address"
+    "string": "استفاده به عنوان آدرس پیش‌فرض"
   },
   "@next_dot_components_dot_molecules_dot_AddressTile_dot_AddressTile_dot_4109348993": {
-    "string": "Default Shipping Address"
+    "string": "آدرس پیش‌فرض ارسال"
   },
   "@next_dot_components_dot_molecules_dot_AttributeValuesChecklist_dot_AttributeValuesChecklist_dot_2029012727": {
     "string": "VIEW ALL OPTIONS"
   },
-  "@next_dot_components_dot_molecules_dot_OrderTabel_dot_OrderTabel_dot_1148029984": {
-    "string": "Value"
+  "@next_dot_components_dot_molecules_dot_OrderTable_dot_OrderTable_dot_1148029984": {
+    "string": "بها"
   },
-  "@next_dot_components_dot_molecules_dot_OrderTabel_dot_OrderTabel_dot_1633831221": {
+  "@next_dot_components_dot_molecules_dot_OrderTable_dot_OrderTable_dot_1633831221": {
     "string": "Date of Order"
   },
-  "@next_dot_components_dot_molecules_dot_OrderTabel_dot_OrderTabel_dot_2387666633": {
+  "@next_dot_components_dot_molecules_dot_OrderTable_dot_OrderTable_dot_2387666633": {
     "string": "Index Number"
   },
-  "@next_dot_components_dot_molecules_dot_OrderTabel_dot_OrderTabel_dot_724329054": {
+  "@next_dot_components_dot_molecules_dot_OrderTable_dot_OrderTable_dot_724329054": {
     "string": "Products Ordered"
-  },
-  "@next_dot_components_dot_molecules_dot_PostListHeader_dot_PostListHeader_dot_3317426832": {
-    "string": "Products found:"
   },
   "@next_dot_components_dot_molecules_dot_ProductDescription_dot_ProductDescription_dot_2623707255": {
     "string": "DESCRIPTION"
@@ -102,16 +99,16 @@
     "string": "SET NEW PASSWORD"
   },
   "@next_dot_components_dot_molecules_dot_ResetPasswordForm_dot_ResetPasswordForm_dot_4028609483": {
-    "string": "Reset your password"
+    "string": "تغییر رمز "
   },
   "@next_dot_components_dot_organisms_dot_AddressForm_dot_AddressFormContent_dot_1139500589": {
-    "string": "Country"
+    "string": "کشور"
   },
   "@next_dot_components_dot_organisms_dot_AddressForm_dot_AddressFormContent_dot_1363074570": {
-    "string": "Address line 1"
+    "string": "آدرس، خط 1"
   },
   "@next_dot_components_dot_organisms_dot_AddressForm_dot_AddressFormContent_dot_253031977": {
-    "string": "City"
+    "string": "شهر"
   },
   "@next_dot_components_dot_organisms_dot_AddressForm_dot_AddressFormContent_dot_2796540622": {
     "string": "ZIP/Postal Code"
@@ -120,7 +117,7 @@
     "string": "Company Name (Optional)"
   },
   "@next_dot_components_dot_organisms_dot_AddressForm_dot_AddressFormContent_dot_3121963259": {
-    "string": "Address line 2"
+    "string": "آدرس، خط 2"
   },
   "@next_dot_components_dot_organisms_dot_AddressForm_dot_AddressFormContent_dot_404705399": {
     "string": "State/province"
@@ -168,25 +165,22 @@
     "string": "Cart Summary"
   },
   "@next_dot_components_dot_organisms_dot_CheckoutAddress_dot_CheckoutAddress_dot_3912924864": {
-    "string": "Same as shipping address"
+    "string": "همان آدرس ارسال"
   },
   "@next_dot_components_dot_organisms_dot_CheckoutPayment_dot_CheckoutPayment_dot_3382401165": {
     "string": "Do you have a gift card voucher or discount code?"
   },
   "@next_dot_components_dot_organisms_dot_CheckoutReview_dot_CheckoutReview_dot_348821000": {
-    "string": "Payment Method"
+    "string": "روش پرداخت"
   },
   "@next_dot_components_dot_organisms_dot_CheckoutReview_dot_CheckoutReview_dot_3577164776": {
     "string": "Shipping Method"
   },
   "@next_dot_components_dot_organisms_dot_CheckoutReview_dot_CheckoutReview_dot_4282475982": {
-    "string": "Billing Address"
+    "string": "آدرس فاکتور"
   },
   "@next_dot_components_dot_organisms_dot_DiscountForm_dot_DiscountForm_dot_3476123": {
     "string": "Apply"
-  },
-  "@next_dot_components_dot_organisms_dot_PostList_dot_PostList_dot_2783099424": {
-    "string": "More +"
   },
   "@next_dot_components_dot_organisms_dot_ProductList_dot_ProductList_dot_2783099424": {
     "string": "More +"
@@ -195,7 +189,7 @@
     "string": "Please select {selectLabel}"
   },
   "@next_dot_components_dot_organisms_dot_ThankYou_dot_ThankYou_dot_1995277831": {
-    "string": "Thank you"
+    "string": "از شما متشکریم!"
   },
   "@next_dot_components_dot_organisms_dot_ThankYou_dot_ThankYou_dot_2116351823": {
     "string": "for your order!"
@@ -216,7 +210,7 @@
     "string": "Maybe you haven’t made your choices yet"
   },
   "@next_dot_components_dot_templates_dot_CartEmpty_dot_CartEmpty_dot_3578601618": {
-    "string": "Your Cart"
+    "string": "سبد خرید شما"
   },
   "@next_dot_pages_dot_CartPage_dot_CartPage_dot_1304869656": {
     "string": "PROCEED TO CHECKOUT"
@@ -234,7 +228,7 @@
     "string": "Load more"
   },
   "account_dot_AddressBook_dot_AddressBook_dot_2776756156": {
-    "string": "Edit address"
+    "string": "ویرایش آدرس"
   },
   "app_dot_Notifications_dot_1053546789": {
     "string": "To update the application to the latest version, please refresh the page!"
@@ -252,10 +246,10 @@
     "string": "New version is available!"
   },
   "components_dot_Breadcrumbs_dot_index_dot_1347475195": {
-    "string": "Back"
+    "string": "بازگشت"
   },
   "components_dot_CartTable_dot_Table_dot_1603950169": {
-    "string": "Delivery Cost"
+    "string": "هزینه تحویل"
   },
   "components_dot_CartTable_dot_Table_dot_2179891060": {
     "string": "Total Cost"
@@ -278,18 +272,6 @@
   "components_dot_CheckoutLogin_dot_SignInForm_dot_2856837597": {
     "string": "Registered user"
   },
-  "components_dot_ContactForm_dot_FormContact_dot_248029207": {
-    "string": "Full Name"
-  },
-  "components_dot_ContactForm_dot_FormContact_dot_263984491": {
-    "string": "Call Me"
-  },
-  "components_dot_ContactForm_dot_FormContact_dot_3615185454": {
-    "string": "Thank you, We will call you as soon as possible"
-  },
-  "components_dot_ContactForm_dot_FormContact_dot_998182906": {
-    "string": "Something went wrong, Please call with phone number on the contact form"
-  },
   "components_dot_LoginForm_dot_index_dot_1405865627": {
     "string": "Sign in"
   },
@@ -297,7 +279,7 @@
     "string": "Offline"
   },
   "components_dot_NotFound_dot_index_dot_1723676032": {
-    "string": "Back to home"
+    "string": "بازگشت به خانه"
   },
   "components_dot_NotFound_dot_index_dot_1782529840": {
     "string": "You may have mistyped the address or the page may have moved."
@@ -311,15 +293,15 @@
   "components_dot_NotFound_dot_index_dot_680965574": {
     "string": "We can’t seem to find a page you are looking for!"
   },
+  "components_dot_OverlayManager_dot_Cart_dot_Cart_dot_1316031908": {
+    "string": "My bag,"
+  },
   "components_dot_OverlayManager_dot_Cart_dot_Cart_dot_1397761112": {
     "context": "items quantity in cart",
-    "string": "{itemsQuantity,plural,one{{itemsQuantity} item} other{{itemsQuantity} items}}"
+    "string": "{itemsQuantity,plural,one {{itemsQuantity} item} other {{itemsQuantity} items}}"
   },
   "components_dot_OverlayManager_dot_Cart_dot_Cart_dot_2426849470": {
     "string": "Go to my bag"
-  },
-  "components_dot_OverlayManager_dot_Cart_dot_Cart_dot_3173718889": {
-    "string": "My Cart"
   },
   "components_dot_OverlayManager_dot_Cart_dot_Empty_dot_3515754810": {
     "string": "Continue Shopping"
@@ -340,7 +322,7 @@
     "string": "Click Here"
   },
   "components_dot_OverlayManager_dot_Login_dot_RegisterForm_dot_2556234295": {
-    "string": "Register"
+    "string": "ثبت‌"
   },
   "components_dot_OverlayManager_dot_Login_dot_RegisterForm_dot_2622394113": {
     "string": "Please check your e-mail for further instructions"
@@ -348,17 +330,17 @@
   "components_dot_OverlayManager_dot_Login_dot_RegisterForm_dot_590842025": {
     "string": "New user has been created"
   },
-  "components_dot_OverlayManager_dot_Login_dot_index_dot_1405865627": {
-    "string": "Sign in"
+  "components_dot_OverlayManager_dot_Login_dot_index_dot_282922692": {
+    "string": "Saleor account"
   },
-  "components_dot_OverlayManager_dot_Login_dot_index_dot_1892574253": {
-    "string": "Sign Up"
+  "components_dot_OverlayManager_dot_Login_dot_index_dot_3254057623": {
+    "string": "Register new account"
   },
-  "components_dot_OverlayManager_dot_Login_dot_index_dot_278393716": {
-    "string": "Login to your account"
+  "components_dot_OverlayManager_dot_Login_dot_index_dot_3293735236": {
+    "string": "Sign in to account"
   },
   "components_dot_OverlayManager_dot_Password_dot_index_dot_4028609483": {
-    "string": "Reset your password"
+    "string": "تغییر رمز "
   },
   "components_dot_OverlayManager_dot_Search_dot_NothingFound_dot_1777769494": {
     "string": "Don’t give up - check the spelling, think of something less specific and then use the search bar above."
@@ -394,13 +376,13 @@
     "string": "CONTINUE SHOPPING"
   },
   "intl_dot_checkoutMessages_dot_paymentMethod": {
-    "string": "PAYMENT METHOD"
+    "string": "نحوه پرداخت"
   },
   "intl_dot_checkoutMessages_dot_paymentNextActionName": {
     "string": "Continue to Review"
   },
   "intl_dot_checkoutMessages_dot_reviewNextActionName": {
-    "string": "Place order"
+    "string": "ثبت سفارش"
   },
   "intl_dot_checkoutMessages_dot_reviewOrder": {
     "string": "REVIEW ORDER"
@@ -415,31 +397,31 @@
     "string": "Continue to Payment"
   },
   "intl_dot_checkoutMessages_dot_stepNameAddress": {
-    "string": "Address"
+    "string": "آدرس"
   },
   "intl_dot_checkoutMessages_dot_stepNamePayment": {
-    "string": "Payment"
+    "string": "پرداخت"
   },
   "intl_dot_checkoutMessages_dot_stepNameReview": {
     "string": "Review"
   },
   "intl_dot_checkoutMessages_dot_stepNameShipping": {
-    "string": "Shipping"
+    "string": "ارسال"
   },
   "intl_dot_commonMessages_dot_account": {
-    "string": "Account"
+    "string": "حساب کاربری"
   },
   "intl_dot_commonMessages_dot_add": {
-    "string": "Add"
+    "string": "افزودن"
   },
   "intl_dot_commonMessages_dot_addressBook": {
     "string": "Address book"
   },
   "intl_dot_commonMessages_dot_cancel": {
-    "string": "Cancel"
+    "string": "لغو"
   },
   "intl_dot_commonMessages_dot_checkout": {
-    "string": "Checkout"
+    "string": "پرداخت نهایی"
   },
   "intl_dot_commonMessages_dot_choosePaymentMethod": {
     "string": "Please choose payment method."
@@ -448,7 +430,7 @@
     "string": "CLEAR FILTERS"
   },
   "intl_dot_commonMessages_dot_eMail": {
-    "string": "Email Address"
+    "string": "آدرس ایمیل"
   },
   "intl_dot_commonMessages_dot_filterHeader": {
     "string": "FILTERS"
@@ -457,10 +439,10 @@
     "string": "First Name"
   },
   "intl_dot_commonMessages_dot_home": {
-    "string": "Home"
+    "string": "خانه"
   },
   "intl_dot_commonMessages_dot_lastName": {
-    "string": "Last Name"
+    "string": "نام خانوادگی"
   },
   "intl_dot_commonMessages_dot_loading": {
     "string": "Loading"
@@ -487,25 +469,25 @@
     "string": "Order history"
   },
   "intl_dot_commonMessages_dot_outOfStock": {
-    "string": "Out of stock"
+    "string": "ناموجود"
   },
   "intl_dot_commonMessages_dot_password": {
-    "string": "Password"
+    "string": "رمزعبور"
   },
   "intl_dot_commonMessages_dot_phone": {
-    "string": "Phone"
+    "string": "شماره تلف"
   },
   "intl_dot_commonMessages_dot_phoneNumber": {
     "string": "Phone number: {phone}"
   },
   "intl_dot_commonMessages_dot_price": {
-    "string": "Price"
+    "string": "قیمت"
   },
   "intl_dot_commonMessages_dot_products": {
-    "string": "Products"
+    "string": "محصولات"
   },
   "intl_dot_commonMessages_dot_promoCode": {
-    "string": "Promo code"
+    "string": "کد ویژه"
   },
   "intl_dot_commonMessages_dot_provideEmailAddress": {
     "string": "Please provide email address."
@@ -514,76 +496,76 @@
     "string": "Will become available for purchase on {date} at {time}"
   },
   "intl_dot_commonMessages_dot_qty": {
-    "string": "Quantity"
+    "string": "تعداد"
   },
   "intl_dot_commonMessages_dot_quantity": {
-    "string": "Quantity"
+    "string": "تعداد"
   },
   "intl_dot_commonMessages_dot_save": {
-    "string": "Save"
+    "string": "ذخیره"
   },
   "intl_dot_commonMessages_dot_search": {
     "string": "search"
   },
   "intl_dot_commonMessages_dot_shipping": {
-    "string": "Shipping"
+    "string": "ارسال"
   },
   "intl_dot_commonMessages_dot_shortEmail": {
-    "string": "Email"
+    "string": "ایمیل"
   },
   "intl_dot_commonMessages_dot_showEmail": {
     "string": "Email: {email}"
   },
   "intl_dot_commonMessages_dot_sku": {
-    "string": "SKU"
+    "string": "واحد انبار داری"
   },
   "intl_dot_commonMessages_dot_status": {
-    "string": "Status"
+    "string": "وضعیت"
   },
   "intl_dot_commonMessages_dot_subtotal": {
-    "string": "Subtotal"
+    "string": "جمع کل"
   },
   "intl_dot_commonMessages_dot_total": {
-    "string": "Total"
+    "string": "مجموع کل"
   },
   "intl_dot_commonMessages_dot_totalPrice": {
-    "string": "Total Price"
+    "string": "قیمت کل"
   },
   "intl_dot_commonMessages_dot_variant": {
-    "string": "Variant"
+    "string": "نوع"
   },
   "intl_dot_commonMessages_dot_youMightLike": {
     "string": "You might like"
   },
   "intl_dot_orderStatusMessages_dot_canceled": {
-    "string": "Canceled"
+    "string": "لغو شده"
   },
   "intl_dot_orderStatusMessages_dot_draft": {
-    "string": "Draft"
+    "string": "پیش‌نویس"
   },
   "intl_dot_orderStatusMessages_dot_fulfilled": {
-    "string": "Fulfilled"
+    "string": "پردازش شده"
   },
   "intl_dot_orderStatusMessages_dot_partiallyFulfilled": {
-    "string": "Partially fulfilled"
+    "string": "پردازش نیمه کامل"
   },
   "intl_dot_orderStatusMessages_dot_unfulfilled": {
-    "string": "Unfulfilled"
+    "string": "پردازش نشده"
   },
   "intl_dot_paymentStatusMessages_dot_fullyCharged": {
-    "string": "Fully charged"
+    "string": "کامل شارژ شده"
   },
   "intl_dot_paymentStatusMessages_dot_fullyRefunded": {
-    "string": "Fully refunded"
+    "string": "بازپرداخت کامل"
   },
   "intl_dot_paymentStatusMessages_dot_notCharged": {
-    "string": "Not charged"
+    "string": "شارژ نشده"
   },
   "intl_dot_paymentStatusMessages_dot_partiallyCharged": {
-    "string": "Partially charged"
+    "string": "قسمتی شارژ شد"
   },
   "intl_dot_paymentStatusMessages_dot_partiallyRefunded": {
-    "string": "Partially refunded"
+    "string": "قسمتی بازپرداخت شد"
   },
   "intl_dot_prodListHeaderCommonMsg_dot_sortOptionsClear": {
     "string": "Clear..."
@@ -616,29 +598,20 @@
   "userAccount_dot_views_dot_OrderDetails_dot_Page_dot_624688748": {
     "string": "Go back to Order History"
   },
-  "views_dot_Home_dot_Page_dot_2512075303": {
-    "string": "It’s All New"
+  "views_dot_Home_dot_Page_dot_2366307429": {
+    "string": "Final reduction"
   },
-  "views_dot_Home_dot_Page_dot_2943588030": {
-    "string": "Posts Latest"
+  "views_dot_Home_dot_Page_dot_2812648978": {
+    "string": "Featured"
   },
-  "views_dot_Home_dot_Page_dot_3564395735": {
-    "string": "New Arrivals"
+  "views_dot_Home_dot_Page_dot_3347022999": {
+    "string": "Shop sale"
   },
-  "views_dot_Home_dot_Page_dot_365365475": {
-    "string": "Our Expertise"
+  "views_dot_Home_dot_Page_dot_3813745889": {
+    "string": "Shop by category"
   },
-  "views_dot_Home_dot_Page_dot_3836266364": {
-    "string": "We Offer Services"
-  },
-  "views_dot_Home_dot_Page_dot_3916929951": {
-    "string": "We will do it in the best way"
-  },
-  "views_dot_Home_dot_Page_dot_786061924": {
-    "string": "Our Services"
-  },
-  "views_dot_Post_dot_Other_dot_2576733443": {
-    "string": "Other posts in this Category"
+  "views_dot_Home_dot_Page_dot_4153800196": {
+    "string": "Up to 70% off sale"
   },
   "views_dot_Product_dot_Other_dot_3212906417": {
     "string": "Other products in this category"
